# wp6_manipulator

./: stack.xml
crops_wp6_arm_common/: CMakeLists.txt  manifest.xml
crops_wp6_arm_common/config/: crops_wp6_arm_controllers.yaml
crops_wp6_arm_common/include/: AbstractCrops.h  CropsNode.h  JointStatePublisher.h  SimulatedCrops.h  SpecifiedTrajectory.h  crops_constants.h  joint_movement_action_controller.h  joint_trajectory_action_controller.h  spline_functions.h
crops_wp6_arm_description/: mainpage.dox  manifest.xml
crops_wp6_arm_launch/: manifest.xml
crops_wp6_arm_msgs/: manifest.xml
crops_wp6_arm_navigation_actions/: mainpage.dox  manifest.xml
crops_wp6_arm_navigation_config/: mainpage.dox  manifest.xml
crops_wp6_arm_navigation_filtering/: mainpage.dox  manifest.xml
crops_wp6_arm_navigation_kinematics/: mainpage.dox  manifest.xml
crops_wp6_arm_navigation_planning/: mainpage.dox  manifest.xml
crops_wp6_arm_navigation_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml
crops_wp6_arm_navigation_tutorials/config/: filters.yaml  joint_limits.yaml  rviz_collision_tutorial_1.vcg  rviz_collision_tutorial_2.vcg  rviz_collision_tutorial_3.vcg  rviz_collision_tutorial_4.vcg
crops_wp6_arm_navigation_tutorials/launch/: planning_scene_architecture.launch  pr2_floorobj_world.launch  rviz_collision_tutorial_1.launch  rviz_collision_tutorial_2.launch  rviz_collision_tutorial_3.launch  rviz_collision_tutorial_4.launch  trajectory_filter.launch
crops_wp6_arm_navigation_tutorials/msg_gen/cpp/include/crops_wp6_arm_navigation_tutorials/: FollowJointTrajectoryControllerState.h
crops_wp6_arm_navigation_tutorials/msg_gen/lisp/: FollowJointTrajectoryControllerState.lisp  _package.lisp  _package_FollowJointTrajectoryControllerState.lisp  crops_wp6_arm_navigation_tutorials-msg.asd
crops_wp6_arm_navigation_tutorials/scripts/: test_ik_trajectory_tutorial.py
crops_wp6_arm_navigation_tutorials/src/: display_trajectory_tutorial.cpp  get_collision_free_ik.cpp  get_fk.cpp  get_ik.cpp  get_solver_info.cpp  get_state_validity.cpp  ik_trajectory_tutorial.cpp  move_arm_joint_goal.cpp  move_arm_simple_pose_goal.cpp  test_planning_scene.cpp
crops_wp6_arm_navigation_tutorials/src/crops_wp6_arm_navigation_tutorials/msg/: _FollowJointTrajectoryControllerState.py  __init__.py
crops_wp6_arm_navigation_tutorials/src/crops_wp6_arm_navigation_tutorials/srv/: _ExecuteCartesianIKTrajectory.py
crops_wp6_arm_navigation_tutorials/srv_gen/cpp/include/crops_wp6_arm_navigation_tutorials/: ExecuteCartesianIKTrajectory.h
crops_wp6_arm_navigation_tutorials/srv_gen/lisp/: ExecuteCartesianIKTrajectory.lisp  _package.lisp  _package_ExecuteCartesianIKTrajectory.lisp  crops_wp6_arm_navigation_tutorials-srv.asd
crops_wp6_arm_navigation_tutorials/worlds/: floorobj.world  pr2_tabletop_world.launch  tabletop.world
crops_wp6_arm_test/: CMakeLists.txt  manifest.xml
(+104 files in other folders)
